Added send result mail action.